using System;

namespace grupal2
{
    public class Boleto
    {
        private string nombreyapellido;
        private int dni;
        private string nombreempresa;
        private string categoria;
        private string origen;
        private string destino;
        private DateTime fecha;
        private DateTime salida;
        private DateTime llegada;
        private int precio;

        public void mostrarboleto() {
            Console.WriteLine("not implemented");
        }
    }
}