namespace grupal2
{
    public class Categoria
    {
        private int nrocategoria;
        private Categoria[] categorias;

        public Categoria(int categoria) {
            // intentionally left blank
        }

        public void calcularprecio() {
            // intentionally left blank
        }
    }
}