namespace grupal2
{
    public class Empresa
    {
        private string nombreempresa;

        public Empresa(string nombreempresa)
        {
            this.nombreempresa = nombreempresa;
        }
    }
}