using System;

namespace grupal2
{
    public class Viaje 
    {
        private string origen;
        private string destino;
        private DateTime fecha;
        private int Duracion {get; set;}
        private int capacidad;
        private int precio;

        public Viaje(string origen, string destino, string fecha, string hora, int capacidad, int precio)
        {
            // intentionally left blank
        }

        public void calcularduracion() {
            // intentionally left blank
        }
    }    
}